# VanillaDNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VanillaDNNConfig.cmake  goorm.manifest
.github/workflows/: cmake.yml  codeql-analysis.yml  msvc-analysis.yml
DNN/Functions/: DNNFunction.cpp  DNNFunction.hpp  Optimizer.cpp  Optimizer.hpp
DNN/Layer/: Layer.cpp  Layer.hpp  OutputLayer.hpp
DNN/Model/: Model.cpp  Model.hpp
DNN/Neuron/: Neuron.cpp  Neuron.hpp
DNN/Node/: Node.hpp
Includes/VanillaDNN/DNN/Functions/: DNNFunction.hpp  Optimizer.hpp
Includes/VanillaDNN/DNN/Layers/: Layer.hpp
Includes/VanillaDNN/DNN/Model/: Model.hpp
Includes/VanillaDNN/Functions/: Activation.hpp  Functions.hpp  Loss.hpp  Optimizer.hpp
Includes/VanillaDNN/Layers/: Conv2DLayer.hpp  DenseLayer.hpp  Layer.hpp  OutputLayer.hpp
Includes/VanillaDNN/MNIST/: MNIST.hpp
Includes/VanillaDNN/Math/: CMakeLists.txt
Includes/VanillaDNN/Math/Matrix/: Matrix.cpp  Matrix.hpp
Includes/VanillaDNN/Math/Vector/: Vector.cpp  Vector.hpp
Includes/VanillaDNN/Model/: Model.hpp
MNIST/: MNIST.cpp  MNIST.hpp
Math/Matrix/: Matrix.cpp  Matrix.hpp  Maxtrix.cpp
Math/Vector/: Vector.cpp  Vector.hpp
Sources/VanillaDNN/DNN/Functions/: DNNFunction.cpp  Functions.cpp  Optimizer.cpp
Sources/VanillaDNN/DNN/Layers/: Layer.cpp
Sources/VanillaDNN/DNN/Model/: Model.cpp
Sources/VanillaDNN/Functions/: Activation.cpp  Loss.cpp  Optimizer.cpp
Sources/VanillaDNN/Layers/: Conv2DLayer.cpp  DenseLayer.cpp  InputLayer.cpp  Layer.cpp  MaxPooling2D.cpp  OutputLayer.cpp
Sources/VanillaDNN/MNIST/: MNIST.cpp
Sources/VanillaDNN/Math/Matrix/: Matrix.cpp  Matrix.hpp
Sources/VanillaDNN/Math/Vector/: Vector.cpp
Sources/VanillaDNN/Model/: Model.cpp
example/example1/: CMakeLists.txt
example/example1/source/: ex1.cpp
example/example2/: CMakeLists.txt
example/example2/source/: ex2.cpp
example/mnist/: CMakeLists.txt
example/mnist/source/: mnist.cpp
src/: main.cpp
